--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -18,7 +18,10 @@
 
     // Small devices (landscape phones, 576px and up)
     @include mixins.responsive(sm) {
-      display: grid;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      position: relative;
     }
 
     .home-img {
@@ -26,7 +29,9 @@
 
       // Small devices (landscape phones, 576px and up)
       @include mixins.responsive(sm) {
-        position: absolute;
+        position: relative;
+        margin-bottom: 2rem;
+        order: -1;
       }
 
       img {
@@ -35,8 +40,9 @@
 
         // Small devices (landscape phones, 576px and up)
         @include mixins.responsive(sm) {
-          width: 65%;
-          transform: translate(80px, -200px);
+          width: 100%;
+          max-width: 300px;
+          transform: translate(0, 0);
         }
       }
     }
@@ -45,11 +51,23 @@
       // Small devices (landscape phones, 576px and up)
       @include mixins.responsive(sm) {
         width: 100%;
-        transform: translate(0px, 230px);
-        font-size: 0.8rem;
+        text-align: left;
+        transform: none;
+        font-size: 0.9rem;
 
         h2 {
-          font-size: 2.5rem !important;
+          font-size: 2rem !important;
+          line-height: 2.5rem;
+        }
+
+        h3 {
+          font-size: 1rem;
+          line-height: 1.5rem;
+        }
+
+        p {
+          font-size: 0.9rem;
+          max-width: 100%;
         }
       }
 
@@ -96,9 +114,14 @@
 
       // Small devices (landscape phones, 576px and up)
       @include mixins.responsive(sm) {
-        transform: translate(-30px, -300px);
+        flex-direction: column;
+        position: absolute;
+        left: -30px;
+        bottom: 600px;
         width: 25px;
-        margin-bottom: 80px;
+        margin-left: 0;
+        margin-left: 20px;
+        transform: none;
       }
 
       a {
